# tta

./: Cargo.toml  example.ts  readme.md  todo.md
.github/workflows/: pr-quality.yml  release.yml  rust.yml
src/: interface_checker.rs  main.rs  shared_lib.rs  type_checker.rs
ts/: example2.ts  example3.ts  example4.ts  example5.ts
