[package]
name = "tta"
version = "0.0.3"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.17.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
swc_common = "6.1.1"
swc_ecma_ast = "6.1.0"
swc_ecma_parser = "8.0.2"
walkdir = "2.5.0"
