[package]
name = "tta"
version = "0.0.4"
edition = "2021"

[dependencies]
ariadne = "0.6.0"
clap = { version = "4.5.29", features = ["derive"] }
indicatif = "0.18.4"
oxc_allocator = "0.126.0"
oxc_parser = "0.126.0"
oxc_ast = "0.126.0"
oxc_span = "0.126.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
walkdir = "2.5.0"
