[package]
name = "tta"
version = "0.0.4"
edition = "2021"

[dependencies]
ariadne = "0.6.0"
clap = { version = "4.5.29", features = ["derive"] }
indicatif = "0.18.4"
oxc = { version = "0.127.0", features = ["full"] } 
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
ignore = "0.4.25"
